--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     
     <!-- Manifest -->
     <link rel="manifest" href="/manifest.json" />
